--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     
     <div id="TelaDeLogin">
-        <h1 class="h1">Login</h1>
+        <h1 class="h1">Olá, amigo! </h1>
         <input class="InEmail" type="text" placeholder="Digite seu email">
         <input class="InSenha" type="text" placeholder="Digite sua senha">
-        <button id="btn01" onclick="ValidacaoBotao()">Enter</button>
+        <button id="btn01" onclick="ValidacaoBotao()">Login</button>
         <div id="div">
             <p class="parag">Esqueceu a senha ? </p>
             <button class="btn">Clique Aqui</button>
